--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                </ul>
                <ul class="main-menu">
                   <li class="active"><a href="#sectionIntro">Home</a></li>
-                  <li><a href="#sectionDemos">Demos</a></li>
-                  <li><a href="#sectionIndustries">Demo Industries</a></li>
-                  <li><a href="#sectionCustomWorks">Custom Works <sup>@</sup></a></li>
-                  <li><a href="#sectionFeatures">Features</a></li>
+                  <li><a href="#">demo</a></li>
+                  <li><a href="./secondpage.html">AR/VR</a></li>
+                  <li><a href="#">image search</a></li>
+                  <li><a href="#">custom designs</a></li>
                </ul>
                <ul class="small-menu">
                   <li><a href="#">SIGN IN</a></li>
@@ -57,8 +57,8 @@
                <div class="mobile-menu-holder color-scheme-dark">
                   <ul class="mobile-menu">
                      <li class="active">HUGE</li>
-                     <li><a href="#">SIGN IN</a></li>
-                     <li><a href="#">SIGN UP</a></li>
+                     <li><a href="./login.html">SIGN IN</a></li>
+                     <li><a href="./signup.html">SIGN UP</a></li>
                   </ul>
                </div>
                <div class="mobile-menu-i">
