--- a/secondpage.html
+++ b/secondpage.html
@@ -56,14 +56,14 @@
             <div class="mobile-menu-w">
                <div class="mobile-menu-holder color-scheme-dark">
                   <ul class="mobile-menu">
-                     <li class="active">HUGE</li>
-                     <li><a href="#">Support</a></li>
-                     <li><a href="#">Purchase</a></li>
+                     <li class="active">LIVSPACE</li>
+                     <li><a href="#">HOME</a></li>
+                     <li><a href="#">AR/VR</a></li>
                   </ul>
                </div>
                <div class="mobile-menu-i">
                   <div class="mobile-logo-w">
-                     <div class="logo-element">HUGE</div>
+                     <div class="logo-element">LIVSPACE</div>
                   </div>
                   <div class="mobile-menu-trigger"><i class="fa fa-bars" aria-hidden="true"></i></div>
                </div>
@@ -87,7 +87,7 @@
                   <a class="demo-w" href="https://vr.yulio.com/nDhdLRiN4W" target="_blank">
                      <div class="demo-header" ng-bind-html='demo.header'></div>
                      <div class="demo-shot-w">
-                        <div class="demo-shot" style="background-image: url('./images/img.jpg')"></div>
+                        <div class="demo-shot" style="background-image: url('images/img.jpg')"></div>
                      </div>
                   </a>
                </div>
