--- a/secondpage.html
+++ b/secondpage.html
@@ -87,7 +87,7 @@
                   <a class="demo-w" href="https://vr.yulio.com/nDhdLRiN4W" target="_blank">
                      <div class="demo-header" ng-bind-html='demo.header'></div>
                      <div class="demo-shot-w">
-                        <div class="demo-shot" style="background-image: url('images/img.jpg')"></div>
+                        <div class="demo-shot" style="background-image: url('images/imgg.jpg')"></div>
                      </div>
                   </a>
                </div>
