--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
                   <li class="active"><a href="#sectionIntro">Home</a></li>
                   <li><a href="#">demo</a></li>
                   <li><a href="./secondpage.html">AR/VR</a></li>
+                     <li><a href="#">measure</a></li>
                   <li><a href="#">image search</a></li>
                   <li><a href="#">custom designs</a></li>
+                  
                </ul>
                <ul class="small-menu">
                   <li><a href="#">SIGN IN</a></li>
@@ -91,7 +93,7 @@
                         <div class="shot-i" style="background-image: url('images/living.jpg')"></div>
                      </div>
                      <div class="shot shot3">
-                        <div class="shot-i" style="background-image: url('images/living.jpg')"></div>
+                        <div class="shot-i" style="background-image: url('images/imgg.jpeg')"></div>
                      </div>
                   </div>
                </div>
@@ -113,7 +115,7 @@
                   <a class="demo-w" href="{{demo.url}}" target="_blank">
                      <div class="demo-header" ng-bind-html='demo.header'></div>
                      <div class="demo-shot-w">
-                        <div class="demo-shot" style="background-image: url('{{demo.image}}')"></div>
+                        <div class="demo-shot" style="background-image: url('./images/imgg.jpeg')"></div>
                      </div>
                   </a>
                </div>
