--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <meta name="twitter:description" content="The most powerful Coming Soon / Errors / Domain For Sale template.">
    </head>
    <body ng-app="company">
+      <script type="text/javascript" src="https://www.sitelevel.com/javabox?crid=s2jbg2l0"></script>
       <div class="all-wrapper">
          <header class="desktop-menu menu-top-w menu-activated-on-hover navbar-fixed-top">
             <div class="menu-top-i os-container">
@@ -121,7 +122,7 @@
                </div>
             </div>
          </section>
-
+<a href="https://www.sitelevel.com/searchbox?crid=s2jbg2l0">Click Here to Search This Site</a>
          <section class="section-header-w centered" id="sectionIndustries">
             <div class="os-container">
                <div class="section-header">
@@ -130,7 +131,15 @@
                </div>
             </div>
          </section>
-
+<!-- Begin siteLevel HTML Searchbox Code -->
+<form method="get" action="https://www.sitelevel.com/query" accept-charset="utf-8">
+  <div class="sl_search_box">
+    <input type="hidden" name="crid" value="s2jbg2l0"/>
+    <input type="text" name="query"/>
+    <button type="submit">Search</button>
+  </div>
+</form>
+<!-- End siteLevel HTML Searchbox Code -->
          <section class="demos-w" ng-controller="industriesController as industries">
             <div class="row">
                <div class="col-sm-6 col-xl-4 sreveal" ng-repeat="industry in industries.industry">
